...
                                    <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="uor-Ax-ubU">
                                            <rect key="frame" x="0.0" y="0.0" width="120" height="120"/>
                                        </imageView>
                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="nicholaskampouris" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="klM-0i-P9J">
                                            <rect key="frame" x="0.0" y="92" width="120" height="28"/>
                                            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
                                            <constraints>
                                                <constraint firstAttribute="height" constant="28" id="Otj-z4-bFr"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" name="ArialMT" family="Arial" pointSize="12"/>
...
                        </cells>
                        <connections>
                            <outlet property="dataSource" destination="NL2-HQ-Xd1" id="YHm-fj-Ulh"/>
                            <outlet property="delegate" destination="NL2-HQ-Xd1" id="dov-Fq-xbs"/>
                        </connections>
                    </collectionView>
                    <navigationItem key="navigationItem" title="USERS" id="ZQo-Nl-N8x"/>
                </collectionViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Eqf-av-8dg" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1438" y="150"/>
        </scene>
        <!--Detail View Controller-->
...
